--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,3 +31,15 @@ body {
   background-repeat: repeat-y;
   background-size: 100%;
 }
+
+.light-theme {
+  --my-background-color: rgba(186, 235, 220, 0.92);
+}
+
+.dark-theme {
+  --my-background-color:  rgba(235, 218, 186, 0.92);
+}
+
+.funky {
+  --my-background-color: rgba(247, 224, 1, 0.95);   
+}
