--- a/styles/Modespage.module.css
+++ b/styles/Modespage.module.css
@@ -17,7 +17,8 @@
 }
 
 .modespage__modecontainer:hover{
-    opacity: 0.9;
+    box-shadow: 0px 8px 20px rgb(0 0 0 / 25%);
+    transform: scale(1.05);
 }
 
 .modespage__modetopbar{
